# c2

./: README.md  pyproject.toml
commander/: .pdm-python  package-lock.json  package.json  pyproject.toml
docs/: overview.md
docs/development/: claude_advice_output_v1.md  css_focused.md
src/: asgi.py
src/commander/: application.py
src/commander/configuration/: envs.py
src/commander/database/models/: team.py  team_member.py  team_roles.py  user.py  user_role.py  xmpp_address.py  xmpp_encryption_methods.py
src/commander/static/css/: styles.css
src/commander/superficial/strings/: string_utils.py
src/commander/superficial/strings/languages/: EN_US.py
