[project]
name = "commander"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "litestar>=2.10.0",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.32",
    "advanced-alchemy>=0.19.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
